--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "node server.js"
+    "start": "NODE_ENV=production node server.js"
   },
   "main": "server.js",
   "homepage": "http://filmoshen.com",
